--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "serve": "^11.3.2"
-  },
-  "devDependencies": {
+    "serve": "^11.3.2",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
